web-infras/parser/tests/fixtures/babel/core/uncategorised/427/output.txt
[SyntaxError]: More than one default clause in switch statement. (1,23)
1|switch (c) { default: default: }
 |                     ^
